@@ -1,3 +1,7 @@
+2012-01-26  Valek Filippov
+
+		* PUB: Improvements in pub98/2k 'Contents' parsing.
+
 2012-01-25  Valek Filippov
 
 		* PUB: start to parse 'Contents' from pub98/2k files.
